Implement RC mode choosing into Web UI

--- a/src_assets/common/assets/web/public/assets/locale/en.json
+++ b/src_assets/common/assets/web/public/assets/locale/en.json
@@ -373,6 +373,12 @@
     "upnp_desc": "Automatically configure port forwarding for streaming over the Internet",
     "vaapi_strict_rc_buffer": "Strictly enforce frame bitrate limits for H.264/HEVC on AMD GPUs",
     "vaapi_strict_rc_buffer_desc": "Enabling this option can avoid dropped frames over the network during scene changes, but video quality may be reduced during motion.",
+    "vaapi_rc_mode": "Rate Control Mode",
+    "vaapi_rc_mode_auto": "Auto",
+    "vaapi_rc_mode_cbr": "CBR (Constant Bitrate)",
+    "vaapi_rc_mode_cqp": "CQP (Constant Quantization Parameter)",
+    "vaapi_rc_mode_desc": "Select the rate control algorithm. CBR is recommended for AMD GPUs to prevent bitrate excursions.",
+    "vaapi_rc_mode_vbr": "VBR (Variable Bitrate)",
     "virtual_sink": "Virtual Sink",
     "virtual_sink_desc": "Manually specify a virtual audio device to use. If unset, the device is chosen automatically. We strongly recommend leaving this field blank to use automatic device selection!",
     "virtual_sink_placeholder": "Steam Streaming Speakers",
