--- a/src_assets/common/assets/web/public/assets/locale/en.json
+++ b/src_assets/common/assets/web/public/assets/locale/en.json
@@ -374,7 +374,7 @@
     "vaapi_strict_rc_buffer": "Strictly enforce frame bitrate limits for H.264/HEVC on AMD GPUs",
     "vaapi_strict_rc_buffer_desc": "Enabling this option can avoid dropped frames over the network during scene changes, but video quality may be reduced during motion.",
     "vaapi_async_depth": "VA-API Async Depth",
-    "vaapi_async_depth_desc": "Number of frames to queue in the GPU. Higher values help FPS stability under GPU load, but may slightly increase latency. Default is 1.",
+    "vaapi_async_depth_desc": "Number of frames to queue in the GPU. Higher values help FPS stability under GPU load, but may slightly increase latency.",
     "virtual_sink": "Virtual Sink",
     "virtual_sink_desc": "Manually specify a virtual audio device to use. If unset, the device is chosen automatically. We strongly recommend leaving this field blank to use automatic device selection!",
     "virtual_sink_placeholder": "Steam Streaming Speakers",
