A lot of changes to VA-API configuration

--- a/src_assets/common/assets/web/public/assets/locale/en.json
+++ b/src_assets/common/assets/web/public/assets/locale/en.json
@@ -371,8 +371,31 @@
     "touchpad_as_ds4_desc": "If disabled, touchpad presence will not be taken into account during gamepad type selection.",
     "upnp": "UPnP",
     "upnp_desc": "Automatically configure port forwarding for streaming over the Internet",
+    "vaapi_rc": "VAAPI Rate Control",
+    "vaapi_rc_auto": "auto -- automatic selection based on hardware and codec (default)",
+    "vaapi_rc_cbr": "cbr -- constant bitrate",
+    "vaapi_rc_cqp": "cqp -- constant qp mode",
+    "vaapi_rc_desc": "This controls the rate control method for VAAPI encoding. 'auto' will select the best mode based on your hardware and codec. 'cbr' provides constant bitrate, 'vbr' provides variable bitrate with better quality, and 'cqp' uses constant QP for consistent quality regardless of bitrate.",
+    "vaapi_rc_vbr": "vbr -- variable bitrate",
     "vaapi_strict_rc_buffer": "Strictly enforce frame bitrate limits for H.264/HEVC on AMD GPUs",
     "vaapi_strict_rc_buffer_desc": "Enabling this option can avoid dropped frames over the network during scene changes, but video quality may be reduced during motion.",
+    "vaapi_amd_mitigations_group": "AMD Bitrate Control Mitigations",
+    "vaapi_qp_min": "Minimum QP",
+    "vaapi_qp_min_desc": "Sets the minimum QP value to prevent extremely high quality frames that cause bitrate spikes. Recommended value: 18-22 for AMD GPUs experiencing bitrate excursions during scene changes. Leave empty to use encoder default.",
+    "vaapi_qp_min_placeholder": "e.g., 18",
+    "vaapi_qp_max": "Maximum QP",
+    "vaapi_qp_max_desc": "Sets the maximum QP value to ensure minimum quality threshold. Recommended value: 48-51. Leave empty to use encoder default.",
+    "vaapi_qp_max_placeholder": "e.g., 51",
+    "vaapi_enforce_hrd": "Enforce HRD Compliance",
+    "vaapi_enforce_hrd_desc": "Enables Hypothetical Reference Decoder compliance for stricter bitrate control. This may reduce bitrate spikes on AMD GPUs but can cause quality variations.",
+    "vaapi_performance_group": "Performance Options",
+    "vaapi_async_depth": "Async Depth",
+    "vaapi_async_depth_desc": "Number of frames to process asynchronously. Higher values (4-8) improve framerate stability when the GPU is under heavy load from games, but may increase latency. Default: 1. Increase this if stream framerate drops below game FPS.",
+    "vaapi_low_power_mode": "Low Power Encoding Mode",
+    "vaapi_low_power_mode_desc": "Controls whether to use the dedicated low-power encoder hardware (when available). LP mode reduces GPU contention but may have different quality characteristics. 'auto' will automatically select based on hardware capabilities.",
+    "vaapi_low_power_auto": "auto -- automatically detect (default)",
+    "vaapi_low_power_enabled": "enabled -- force low power mode",
+    "vaapi_low_power_disabled": "disabled -- force normal mode",
     "virtual_sink": "Virtual Sink",
     "virtual_sink_desc": "Manually specify a virtual audio device to use. If unset, the device is chosen automatically. We strongly recommend leaving this field blank to use automatic device selection!",
     "virtual_sink_placeholder": "Steam Streaming Speakers",
