Add XSX gamepad
I only added this cause I were bored enough, probably useless change.

--- a/src_assets/common/assets/web/public/assets/locale/bg.json
+++ b/src_assets/common/assets/web/public/assets/locale/bg.json
@@ -229,6 +229,7 @@
     "gamepad_manual": "Ръчни настройки за DS4",
     "gamepad_x360": "X360 (Xbox 360)",
     "gamepad_xone": "XOne (Xbox One)",
+    "gamepad_xseries": "XSeries (Xbox Series S|X)",
     "global_prep_cmd": "Подготвителни команди",
     "global_prep_cmd_desc": "Настройване на списък с команди, които да се изпълняват преди или след дадено приложение. Ако някоя от посочените подготвителни команди се провали, процесът на стартиране на приложението ще бъде прекъснат.",
     "hevc_mode": "Поддръжка на HEVC",
