--- a/src_assets/common/assets/web/public/assets/locale/pt.json
+++ b/src_assets/common/assets/web/public/assets/locale/pt.json
@@ -229,6 +229,7 @@
     "gamepad_manual": "Opções de DS4 manual",
     "gamepad_x360": "X360 (Xbox 360)",
     "gamepad_xone": "XOne (Xbox One)",
+    "gamepad_xseries": "XSeries (Xbox Series S|X)",
     "global_prep_cmd": "Preparações do Comando",
     "global_prep_cmd_desc": "Configure uma lista de comandos a serem executados antes ou depois de executar qualquer aplicativo. Se algum dos comandos de preparação especificados falhar, o processo de lançamento do aplicativo será abortado.",
     "hevc_mode": "Suporte ao HEVC",
