--- a/src_assets/common/assets/web/public/assets/locale/ru.json
+++ b/src_assets/common/assets/web/public/assets/locale/ru.json
@@ -229,6 +229,7 @@
     "gamepad_manual": "Ручные настройки DS4",
     "gamepad_x360": "X360 (Xbox 360)",
     "gamepad_xone": "XOne (Xbox One)",
+    "gamepad_xseries": "XSeries (Xbox Series S|X)",
     "global_prep_cmd": "Команды подготовки",
     "global_prep_cmd_desc": "Настроить список команд, которые будут выполнены до или после запуска любого приложения. Если какая-либо из указанных команд подготовки не сработает должным образом, то весь процесс запуска приложения будет прерван.",
     "hevc_mode": "Поддержка HEVC",
