--- a/src_assets/common/assets/web/public/assets/locale/it.json
+++ b/src_assets/common/assets/web/public/assets/locale/it.json
@@ -229,6 +229,7 @@
     "gamepad_manual": "Opzioni manuali DS4",
     "gamepad_x360": "X360 (Xbox 360)",
     "gamepad_xone": "XOne (Xbox One)",
+    "gamepad_xseries": "XSeries (Xbox Series S|X)",
     "global_prep_cmd": "Comandi di preparazione",
     "global_prep_cmd_desc": "Configura un elenco di comandi da eseguire prima o dopo aver eseguito qualsiasi applicazione. Se uno qualsiasi dei comandi di preparazione specificati fallisce, il processo di avvio dell'applicazione verrà interrotto.",
     "hevc_mode": "Supporto HEVC",
