--- a/src_assets/common/assets/web/public/assets/locale/pt_BR.json
+++ b/src_assets/common/assets/web/public/assets/locale/pt_BR.json
@@ -229,6 +229,7 @@
     "gamepad_manual": "Opções manuais do DS4",
     "gamepad_x360": "X360 (Xbox 360)",
     "gamepad_xone": "XOne (Xbox One)",
+    "gamepad_xseries": "XSeries (Xbox Series S|X)",
     "global_prep_cmd": "Preparativos para o comando",
     "global_prep_cmd_desc": "Configure uma lista de comandos a serem executados antes ou depois da execução de qualquer aplicativo. Se algum dos comandos de preparação especificados falhar, o processo de inicialização do aplicativo será abortado.",
     "hevc_mode": "Suporte a HEVC",
