--- a/src_assets/common/assets/web/public/assets/locale/uk.json
+++ b/src_assets/common/assets/web/public/assets/locale/uk.json
@@ -229,6 +229,7 @@
     "gamepad_manual": "Налаштування DS4 вручну",
     "gamepad_x360": "X360 (Xbox 360)",
     "gamepad_xone": "XOne (Xbox One)",
+    "gamepad_xseries": "XSeries (Xbox Series S|X)",
     "global_prep_cmd": "Підготовчі Команди",
     "global_prep_cmd_desc": "Налаштуйте список команд, які потрібно виконати до або після запуску будь-якої програми. Якщо будь-яка із зазначених команд підготовки не спрацює, процес запуску програми буде перервано.",
     "hevc_mode": "Підтримка HEVC",
